--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -11,13 +11,13 @@
       margin: auto;
     }
     a:hover {
-      color: #0c0c0c;
+      /*color: #ef5f96;*/
     }
     .about_us{
       padding-left: 90px;
       padding-right: 90px;
       font-family: "PT Sans";
-      margin: 10px 0 0 0;
+      /*margin: 10px 0 0 0;*/
       text-align: justify;
     }
   </style>
@@ -135,7 +135,7 @@
   </div>
 
 </div>
-</div>
+
   <!--Мужское белье///-->
 <br> <br>
 <h1><%= link_to "Мужское белье", men_path %></h1>
@@ -220,7 +220,7 @@
     <h4>code: 11259</h4>
   </div>
 </div>
-
+</div>
 <!--Footer///////////////////////////////////////////////////////////-->
 
 
