--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1547,7 +1547,7 @@ header {
 }
 
 .menu > ul > li a {
-  color: #e4518f;
+  color: #fff3f5;
   font-family: 'Open Sans', sans-serif;
   font-size: 18px;
   line-height: 56px;
@@ -1563,7 +1563,7 @@ header {
 .menu > ul > li .submenu {
   z-index: 2;
   text-align: left;
-  background: #eeeeee;
+  background: #222;
   list-style: none outside none;
   padding: 5px 15px;
   display: none;
@@ -1586,7 +1586,7 @@ header {
 }
 
 .menu > ul > li .submenu li a:hover {
-  color: #dd81a7;
+  color: #ef5f96;
 }
 
 .menu > ul > li:hover .submenu {
@@ -1600,13 +1600,13 @@ header {
 }
 
 .menu > ul > li:hover > a {
-  color: #171add;
+  color: #ef5f96;
 }
 
 .slider {
   width: 100%;
-  max-width: 1220px;
-  min-width: 600px;
+  max-width: 1000px;
+  min-width: 500px;
   margin: 0 auto;
 }
 
