--- a/app/views/static_pages/howtobuy.html.erb
+++ b/app/views/static_pages/howtobuy.html.erb
@@ -18,7 +18,7 @@
 
 <div class="about_us">
   <p>Для того, чтобы сделать заказ в нашем интернет-магазине, достаточно связаться с нами по указанным на сайте телефонам.</p>
-  <p>Опалата осуществялется наложным платежем или через начисления денег на карту Приватбанка</p>
+  <p>Оплата осуществляется наложенным платежом или через начисления денег на карту Приватбанка</p>
 </div>
 </div>
 </body>
